<resources>
    <string name="app_name" translatable="false">Wine Rating Calc</string>
    <string name="nose">Nose</string>
    <string name="visual">Visual</string>
    <string name="total">Total:</string>
    <string name="visual.limpidity">limpidity</string>
    <string name="visual.otherThanLimpidity">Aspect other than limp.</string>
    <string name="nose.genuiness">genuiness</string>
    <string name="nose.positiveIntensity">positive intensity</string>
    <string name="nose.quality">quality</string>
    <string name="taste">Taste</string>
    <string name="taste.genuiness">genuiness</string>
    <string name="taste.positiveIntensity">positive intensity</string>
    <string name="taste.harmoniousPersistence">harmonious persistence</string>
    <string name="taste.quality">quality</string>
    <string name="harmony">Harmony</string>
    <string name="harmony.overallJudgement">overall judgement</string>
    <string name="action_send">Send</string>
    <string name="sampleNumber">Sample No.:</string>
    <string name="eliminated">eliminated</string>
    <string name="action_pick_account">Pick a user account</string>
</resources>
